# legion-staking

.github/workflows/: build-wasm.yml
contract/: Cargo.toml  build.bat  build.cmd  build.py  build2.cmd  build_final.cmd  build_log_clean.txt  build_wasm.cmd  check_rust.cmd  check_target.bat  check_users.bat  copy_tc.bat  do_build.cmd  err2.txt  jlink.bat  legion_staking.wasm  msvc_check.bat  subst_build.bat  sysroot.bat  try_build.bat
contract/.cargo/: config.toml
contract/src/: admin.rs  contract.rs  events.rs  lib.rs  rewards.rs  views.rs
