[package]
name = "legion-staking"
version = "1.0.0"
edition = "2021"
description = "NEAR Legion NFT Staking Contract - lock NFTs for rewards"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.4.0", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uint = { version = "0.9", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.release.build-override]
opt-level = 3