[package]
name = "legion-staking"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.28.0", features = ["unstable"] }
borsh = { version = "1.5.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true